--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
       <button type="submit" onclick="window.open('files/CV.pdf')">Download my CV</button>
     </div>
 
+    <!--Delete this section once it's not needed for the exercise-->
     <div class="myself">
       <p>This page is about myself. This is what I enjoy doing:</p>
       <ul class="myself-list">
@@ -91,6 +92,7 @@
       <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
     </div>
 
+    <!--Replace the SVG with a relevant animation once you find one-->
     <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
           <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
