--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="profile">
       <img src="img/lilla-pulay-profile.png" class="profile__portrait" alt="Lilla Pulay Portrait">
       <!-- Photo needs to be replaced with a new one and sized properly - better resolution needed-->
-      <h1> Hello World! </h1>
+      <h1> Welcome! </h1>
       <p>
         My name is Lilla Pulay. I'm a <span id="web">Web</span> Development student located in the Netherlands. This is my portfolio page.
         <!-- Span needs to be styled later. -->
