--- a/about.html
+++ b/about.html
@@ -82,12 +82,14 @@
 
     <!-- Remove this section once it's not needed for the exercise -->
     <div class="myself">
-      <p>This page is about myself. This is what I enjoy doing:</p>
+      <p>This is what I enjoy doing:</p>
       <ul class="myself-list">
-        <li>Front-end development</li>
-        <li>Back-end development</li>
-        <li>Test driven development</li>
-        <li>Climbing</li>
+        <li>Studying Web Development</li>
+        <li>Listening to music</li>
+        <li>Studying languages</li>
+        <li>Reading</li>
+        <li>Gardening</li>
+        <li>Nature</li>
       </ul>
       <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
     </div>
