--- a/work.html
+++ b/work.html
@@ -3,8 +3,9 @@
 <html>
 
   <head>
-    <meta name="description" content="Lilla Pulay - Portfolio" charset="utf-8">
+    <meta name="description" content="Lilla Pulay - Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="shortcut icon" href="img/favicon.ico">
       <!-- The example page in CodePen had: type="image/x-icon" for the favicon, if I insert it, my LOGO disappears - look up solution -->
     <title> Work </title>
