Fixed charset based on error message

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
 <html>
 
   <head>
-    <meta name="description" content="Lilla Pulay - Portfolio" charset="utf-8">
+    <meta name="description" content="Lilla Pulay - Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="shortcut icon" href="img/favicon.ico">
       <!-- The example page in CodePen had: type="image/x-icon" for the favicon, if I insert it, my LOGO disappears - look up solution -->
     <title> Home </title>
