--- a/about.html
+++ b/about.html
@@ -40,22 +40,11 @@
     <div class="about">
       <h1>About me</h1>
       <p>
-        My name is Lilla Pulay. I moved to the Netherlands last year and I'm currently working on transitioning into the field of <span id="web">Web Development.</span>
+        My name is Lilla Pulay. I moved to the Netherlands last year and I'm currently working on transitioning into the field of <span class="about">Web Development.</span>
       </p>
       <p>
         My goal is to pursue a fulfilling career that I'm really passionate about.
-        I aspire to become a <span id="web">Front-End Developer</span> with a strong knowledge of <span id="web">User Experience</span> principles.
-        <!-- I have all spans on a separate ID and targeted them in CSS with #web, but it counts as an error due to duplicate ID - this is one of the ways I tried fixing it,
-        but nothing seems to work:
-
-      .about span {
-          padding: 2px 5px;
-          display: inline-block;
-          background: var(--span-color);
-        }
-
-        When I tried this, I changed "span id="web"" to span class="about" - didn't work as the green background didn't appear.
-      -->
+        I aspire to become a <span class="about">Front-End Developer</span> with a strong knowledge of <span class="about">User Experience</span> principles.
       </p>
     </div>
 
