Commented out duplicate button

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         <li>Gardening</li>
         <li>Nature</li>
       </ul>
-      <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
+      <!-- Duplicate button, keeping the code here for now to remember this method <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a> -->
     </div>
 
     <!-- Look for a relevant SVG and replace this one -->
