--- a/work.html
+++ b/work.html
@@ -43,9 +43,9 @@
       <!-- Grid items will live here -->
 
         <div class="grid__item">
-          <h3>Mobile web app</h3>
+          <h3>Project 1</h3>
           <p>
-            Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+            Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
         </div>
@@ -53,7 +53,7 @@
         <div class="grid__item">
           <h3>Project 2</h3>
           <p>
-            Short description...
+            Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
         </div>
@@ -61,7 +61,7 @@
         <div class="grid__item">
           <h3>Project 3</h3>
           <p>
-            Short description...
+            Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
         </div>
@@ -69,7 +69,7 @@
         <div class="grid__item">
           <h3>Project 4</h3>
           <p>
-            Short description...
+            Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
         </div>
@@ -77,7 +77,7 @@
         <div class="grid__item">
           <h3>Project 5</h3>
           <p>
-            Short description...
+            Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
         </div>
@@ -85,7 +85,7 @@
         <div class="grid__item">
           <h3>Project 6</h3>
           <p>
-            Short description...
+            Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
         </div>
