Updated/removed comments

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="img/favicon.ico">
-      <!-- The example page in CodePen had: type="image/x-icon" for the favicon, if I insert it, my LOGO disappears - look up solution -->
     <title> About me</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -18,7 +17,6 @@
 
     <header class="page-header">
       <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item"></a>
-        <!-- Needs to be resized, will make a proper logo a bit later -->
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -81,7 +79,7 @@
       <button type="submit" onclick="window.open('files/CV.pdf')">Download my CV</button>
     </div>
 
-    <!-- Remove this section once it's not needed for the exercise -->
+    <!-- Maybe remove this section once it's not needed for the exercise -->
     <div class="myself">
       <p>This is what I enjoy doing:</p>
       <ul class="myself-list">
@@ -95,7 +93,7 @@
       <!-- Duplicate button, keeping the code here for now to remember this method <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a> -->
     </div>
 
-    <!-- Look for a relevant SVG and replace this one -->
+    <!-- Look for a relevant SVG and replace this one - haven't found one I like yet -->
     <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
           <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
@@ -1029,8 +1027,6 @@
           />
       </g>
     </svg>
-
-
 
     <footer class="page-footer">
       <p>
