--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="img/favicon.ico">
-      <!-- The example page in CodePen had: type="image/x-icon" for the favicon, if I insert it, my LOGO disappears - look up solution -->
     <title> Contact me</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -18,7 +17,6 @@
 
     <header class="page-header">
       <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item"></a>
-        <!-- Needs to be resized, will make a proper logo a bit later -->
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -40,7 +38,7 @@
     <div class="contact-form">
       <h1>Send me a message</h1>
       <form action="#" method="post" id="contact-form">
-        <!-- I added the "#" in order to pass code linting, not sure it is the correct solution or it breaks something else, so far seems okay-->
+        <!-- I added the "#" in order to pass code linting as it created an error, not sure it is the correct solution or it breaks something else, so far seems okay-->
         <label class="standard-label" for="contact-email"> Email*: </label>
         <input type="email" id="contact-email" required>
         <br><br>
