--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="download">
-      <button type="submit" onclick="window.open('files/CV.pdf')">Download my CV</button>
+      <button type="submit" onclick="window.open('files/CV.pdf')" target="_blank">Download my CV</button>
     </div>
 
     <!-- Maybe remove this section once it's not needed for the exercise -->
@@ -90,6 +90,7 @@
         <li>Gardening</li>
         <li>Nature</li>
       </ul>
+      <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
       <!-- Duplicate button, keeping the code here for now to remember this method <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a> -->
     </div>
 
