--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="download">
-      <button type="submit" onclick="window.open('files/CV.pdf')" target="_blank">Download my CV</button>
+      <button type="submit" onclick="window.open('files/CV.pdf')">Download my CV</button>
     </div>
 
     <!-- Maybe remove this section once it's not needed for the exercise -->
