--- a/about.html
+++ b/about.html
@@ -75,9 +75,11 @@
       </table>
     </div>
 
-    <div class="download">
-      <button type="submit" onclick="window.open('files/cv.pdf')">Download my CV</button>
-    </div>
+    <!-- Duplicate button, keeping the code here for now to remember this method
+      <div class="download">
+        <button type="submit" onclick="window.open('files/cv.pdf')">Download my CV</button>
+      </div>
+    -->
 
     <!-- Maybe remove this section once it's not needed for the exercise -->
     <div class="myself">
@@ -90,9 +92,7 @@
         <li>Gardening</li>
         <li>Nature</li>
       </ul>
-      <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
-      <!-- Duplicate button, keeping the code here for now to remember this method <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a> -->
-    </div>
+      <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a></div>
 
     <!-- Look for a relevant SVG and replace this one - haven't found one I like yet -->
     <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
