--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title> Home </title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
@@ -35,7 +35,7 @@
     </header>
 
     <div class="profile">
-      <img src="img/lilla-pulay-profile.png" class="profile__portrait" alt="Lilla Pulay Portrait">
+      <img src="img/lilla_pulay_profile.jpg" class="profile__portrait" alt="Lilla Pulay Portrait">
       <h1> Welcome! </h1>
       <p>
         My name is Lilla Pulay. I'm a <span id="web">Web</span> Development student located in the Netherlands. This is my portfolio page.
@@ -47,7 +47,7 @@
 
     <footer class="page-footer">
       <p>
-        Find me on
+        <span class="page-footer">Find me on</span>
       </p>
       <div class="social-media">
         <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github" title="GitHub"></a>
