--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <title> About me</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
@@ -75,13 +75,9 @@
       </table>
     </div>
 
-    <div class="download">
-      <button type="submit" onclick="window.open('portfolio-website/files/cv.pdf')">Download my CV</button>
-    </div>
-
     <!-- Maybe remove this section once it's not needed for the exercise -->
     <div class="myself">
-      <p>This is what I enjoy doing:</p>
+      <p>I enjoy...</p>
       <ul class="myself-list">
         <li>Studying Web Development</li>
         <li>Listening to music</li>
@@ -90,7 +86,7 @@
         <li>Gardening</li>
         <li>Nature</li>
       </ul>
-      <!-- Duplicate button, keeping the code here for now to remember this method <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a> -->
+      <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
     </div>
 
     <!-- Look for a relevant SVG and replace this one - haven't found one I like yet -->
@@ -1030,7 +1026,7 @@
 
     <footer class="page-footer">
       <p>
-        Find me on
+        <span class="page-footer">Find me on</span>
       </p>
       <div class="social-media">
         <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github" title="GitHub"></a>
