--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
     <title> Work </title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
@@ -40,37 +40,45 @@
       <div class="grid">
 
         <div class="grid__item">
-          <h3>Project 1</h3>
+          <h3>Portfolio website</h3>
           <p>
-            Coming soon...
+            Website created utilizing what HTML and CSS has to offer.
           </p>
-          <a href="#">See project on GitHub</a>
+          <a href=#>Read more</a><br>
+          <a href="https://github.com/lillapulay/portfolio-website" target="_blank" >See code on GitHub</a>
         </div>
 
         <div class="grid__item">
-          <h3>Project 2</h3>
+          <h3>Javascript Pokedex</h3>
           <p>
-            Coming soon...
+            Pokedex created with vanilla Javascript.
           </p>
-          <a href="#">See project on GitHub</a>
+          <a href="#">Read more</a> <br>
+          <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">See code on GitHub</a>
         </div>
 
         <div class="grid__item">
-          <h3>Project 3</h3>
+          <h3>Pokedex 2.0</h3>
           <p>
-            Coming soon...
+            The Pokedex app upgraded with jQuery and more.
           </p>
-          <a href="#">See project on GitHub</a>
+          <a href="#">Read more</a> <br>
+          <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">See code on GitHub</a>
         </div>
 
         <div class="grid__item">
-          <h3>Project 4</h3>
+          <h3>Coming soon...</h3>
+          <!--
           <p>
             Coming soon...
           </p>
           <a href="#">See project on GitHub</a>
+          -->
         </div>
 
+<!-- Hiding empty grids for now
         <div class="grid__item">
           <h3>Project 5</h3>
           <p>
@@ -86,13 +94,13 @@
           </p>
           <a href="#">See project on GitHub</a>
         </div>
-
+-->
       </div>
     </section>
 
     <footer class="page-footer">
       <p>
-        Find me on
+        <span class="page-footer">Find me on</span>
       </p>
       <div class="social-media">
         <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github" title="GitHub"></a>
