--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
     <!-- Maybe remove this section once it's not needed for the exercise -->
     <div class="myself">
-      <p>I enjoy...</p>
+      <p><span>I enjoy...</span></p>
       <ul class="myself-list">
         <li>Studying Web Development</li>
         <li>Listening to music</li>
@@ -86,7 +86,7 @@
         <li>Gardening</li>
         <li>Nature</li>
       </ul>
-      <a href="files/cv.pdf" class="button" download target="_blank"><span id="CV">Download my CV</span></a>
+      <a href="files/cv.pdf" class="button" download target="_blank">Download my CV</a>
     </div>
 
     <!-- Look for a relevant SVG and replace this one - haven't found one I like yet -->
