--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
         <li>Gardening</li>
         <li>Nature</li>
       </ul>
-      <a href="files/cv.pdf" class="button" download target="_blank">Download my CV</a>
+      <!-- <a href="files/cv.pdf" class="button" download target="_blank">Download my CV</a> -->
     </div>
 
     <!-- Look for a relevant SVG and replace this one - haven't found one I like yet -->
