--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
         <div class="grid__item">
           <h3>Pokedex 2.0</h3>
           <p>
-            The Pokedex app upgraded with jQuery and more.
+            The Pokedex app upgraded with jQuery and Bootstrap.
           </p>
           <a href="#">Read more</a> <br>
           <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">See website</a><br>
@@ -69,32 +69,39 @@
         </div>
 
         <div class="grid__item">
-          <h3>Coming soon...</h3>
-          <!--
+          <h3>myFlix</h3>
           <p>
-            Coming soon...
+            Movie app consisting of a movie database and client-side.
           </p>
-          <a href="#">See project on GitHub</a>
-          -->
-        </div>
-
-<!-- Hiding empty grids for now
-        <div class="grid__item">
-          <h3>Project 5</h3>
-          <p>
-            Coming soon...
-          </p>
-          <a href="#">See project on GitHub</a>
+          <a href="#">Read more</a> <br>
+          <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
         </div>
 
         <div class="grid__item">
-          <h3>Project 6</h3>
+          <h3>MyAwesomeQuizApp</h3>
           <p>
-            Coming soon...
+            Simple quiz app created with Angular.
           </p>
-          <a href="#">See project on GitHub</a>
+          <a href="#">Read more</a> <br>
+          <a href="https://lillapulay.github.io/my-awesome-quiz-app/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/my-awesome-quiz-app" target="_blank">See code on GitHub</a>
         </div>
--->
+
+        <div class="grid__item">
+          <h3>To-Do App</h3>
+          <p>
+            Basic to-do app built with Vue.js.
+          </p>
+          <a href="#">Read more</a> <br>
+          <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
+        </div>
+
+        <div class="grid__item">
+          <h3>Check back later for more projects!</h3>
+        </div>
+
       </div>
     </section>
 
