Added links to project descriptions

--- a/work.html
+++ b/work.html
@@ -40,20 +40,11 @@
       <div class="grid">
 
         <div class="grid__item">
-          <h3>Portfolio website</h3>
-          <p>
-            Website created utilizing what HTML and CSS has to offer.
-          </p>
-          <a href=#>Read more</a><br>
-          <a href="https://github.com/lillapulay/portfolio-website" target="_blank" >See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
           <h3>Javascript Pokedex</h3>
           <p>
             Pokedex created with vanilla Javascript.
           </p>
-          <a href="#">Read more</a> <br>
+          <a href="projects/JavaScriptPokedex.html">Read more</a> <br>
           <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">See code on GitHub</a>
         </div>
@@ -63,7 +54,7 @@
           <p>
             The Pokedex app upgraded with jQuery and Bootstrap.
           </p>
-          <a href="#">Read more</a> <br>
+          <a href="projects/jQueryPokedex.html">Read more</a> <br>
           <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">See code on GitHub</a>
         </div>
@@ -73,7 +64,7 @@
           <p>
             Movie app consisting of a movie database and client-side.
           </p>
-          <a href="#">Read more</a> <br>
+          <a href="projects/myFlix.html">Read more</a> <br>
           <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
         </div>
@@ -83,7 +74,7 @@
           <p>
             Simple quiz app created with Angular.
           </p>
-          <a href="#">Read more</a> <br>
+          <a href="projects/MyAwesomeQuizApp.html">Read more</a> <br>
           <a href="https://lillapulay.github.io/my-awesome-quiz-app/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/my-awesome-quiz-app" target="_blank">See code on GitHub</a>
         </div>
@@ -93,7 +84,7 @@
           <p>
             Basic to-do app built with Vue.js.
           </p>
-          <a href="#">Read more</a> <br>
+          <a href="projects/ToDoApp.html">Read more</a> <br>
           <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
         </div>
