Added a short description to each project

--- a/projects/JavaScriptPokedex.html
+++ b/projects/JavaScriptPokedex.html
@@ -34,7 +34,31 @@
       </nav>
     </header>
 
-
+    <section class="project">
+      <h1>JavaScript Pokedex</h1>
+      <div class="project-description">
+        <img src="../img/pokejs.PNG" class="project__picture" alt="Screenshot of the app">
+        <h2>Description</h2>
+        <p>
+          Pokemon app that loads data from an external API, displays each object on a separate button and shows further details in a modal.
+          The app was created using vanilla JavaScript and styled using CSS.
+          This project was part of the CF Full-Stack Web Development course.<br>
+          See the upgraded version <a href="jQueryPokedex.html">here</a>.
+        </p>
+        <div>
+          <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">See code on GitHub</a>
+        </div>
+        <h2>Planned updates</h2>
+        <ul>
+          <li>search bar, possibly a 'sort' function</li>
+          <li>'Back to top' button</li>
+          <li>loading indicator</li>
+          <li>error handling and corresponding messages (e.g. offline mode)</li>
+        </ul>
+      </div>
+      <a href="../work.html"> Back to all projects </a>
+    </section>
 
     <footer class="page-footer">
       <p>
