--- a/projects/MyAwesomeQuizApp.html
+++ b/projects/MyAwesomeQuizApp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../img/favicon.ico">
-    <title> JavaScript Pokedex </title>
+    <title> MyAwesomeQuizApp </title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
@@ -34,7 +34,30 @@
       </nav>
     </header>
 
-
+    <section class="project">
+      <h1>MyAwesomeQuizApp</h1>
+      <div class="project-description">
+        <img src="../img/quiz.PNG" class="project__picture" alt="Screenshot of the app">
+        <h2>Description</h2>
+        <p>
+          Simple quiz app created with Angular.
+          This project was part of the CF Full-Stack Web Development course.
+        </p>
+        <div>
+          <a href="https://lillapulay.github.io/my-awesome-quiz-app/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/my-awesome-quiz-app" target="_blank">See code on GitHub</a>
+        </div>
+        <h2>Planned updates</h2>
+        <ul>
+          <li>welcome view: improved component placement</li>
+          <li>results: show correct answers and questions besides the answer the user has given</li>
+          <li>question cards: improved display of choices</li>
+          <li>load quiz data from an API instead of JSON files</li>
+          <li>UI and design updates</li>
+        </ul>
+      </div>
+      <a href="../work.html"> Back to all projects </a>
+    </section>
 
     <footer class="page-footer">
       <p>
