--- a/projects/ToDoApp.html
+++ b/projects/ToDoApp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../img/favicon.ico">
-    <title> JavaScript Pokedex </title>
+    <title> To-Do App </title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
@@ -34,7 +34,28 @@
       </nav>
     </header>
 
-
+    <section class="project">
+      <h1>To-Do App</h1>
+      <div class="project-description">
+        <img src="../img/todo.PNG" class="project__picture" alt="Screenshot of the app">
+        <h2>Description</h2>
+        <p>
+          Basic to-do app created with Vue.js.
+          This project was part of the CF Full-Stack Web Development course.
+        </p>
+        <div>
+          <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
+        </div>
+        <h2>Planned updates</h2>
+        <ul>
+          <li>drag-and-drop function</li>
+          <li>local storage</li>
+          <li>UI updates (e.g. improvements regarding checkboxes and button placement)</li>
+        </ul>
+      </div>
+      <a href="../work.html"> Back to all projects </a>
+    </section>
 
     <footer class="page-footer">
       <p>
