--- a/projects/jQueryPokedex.html
+++ b/projects/jQueryPokedex.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../img/favicon.ico">
-    <title> JavaScript Pokedex </title>
+    <title> jQuery Pokedex </title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
@@ -34,7 +34,31 @@
       </nav>
     </header>
 
-
+    <section class="project">
+      <h1>jQuery Pokedex</h1>
+      <div class="project-description">
+        <img src="../img/poquery.PNG" class="project__picture" alt="Screenshot of the app">
+        <h2>Description</h2>
+        <p>
+          The <a href="JavaScriptPokedex.html">JavaScript Pokedex </a> app upgraded using jQuery and Bootstrap. <br>
+          The app loads data from an external API, displays each object on a separate button and shows further details in a modal.
+          This version was created using vanilla JavaScript, jQuery and styled using CSS and Bootstrap.<br>
+          This project was part of the CF Full-Stack Web Development course.
+        </p>
+        <div>
+          <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">See code on GitHub</a>
+        </div>
+        <h2>Planned updates</h2>
+        <ul>
+          <li>search bar, possibly a 'sort' function</li>
+          <li>'Back to top' button</li>
+          <li>loading indicator</li>
+          <li>error handling and corresponding messages (e.g. offline mode)</li>
+        </ul>
+      </div>
+      <a href="../work.html"> Back to all projects </a>
+    </section>
 
     <footer class="page-footer">
       <p>
