--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../img/favicon.ico">
-    <title> JavaScript Pokedex </title>
+    <title> myFlix </title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
@@ -34,7 +34,51 @@
       </nav>
     </header>
 
+    <section class="project">
+      <h1>myFlix</h1>
+      <div class="project-description">
+        <img src="../img/myflix.PNG" class="project__picture" alt="Screenshot of the app">
+        <h2>Description</h2>
+        <p>
+          Movie app consisting of a database containing a few movies and a client-side providing several features for users.
+          This project was part of the CF Full-Stack Web Development course.<br>
+          The web application provides users with access to information about different movies, directors, and genres.
+          Users can sign up, log in, update their account information and manage a list of their favorite movies.
+          <br><br>
+            <a href="https://mymovieapi2020.herokuapp.com/documentation.html" target="_blank">View documentation</a>
+          <br><br>
+        </p>
+        <div>
+          <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
+          <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
+        </div>
+        <h2>Planned updates</h2>
+        <h3>Back-end</h3>
+        <ul>
+          <li>improved server-side validation</li>
+          <ul>
+            <li>username and password requirements (length, characters) and corresponding alerts/messages</li>
+            <li>1 user per email</li>
+            <li>user data updates with matching params only</li>
+          </ul>
+        </ul>
 
+        <h3>Client-side</h3>
+        <ul>
+          <li>animated logo/title in login and registration view</li>
+          <li>login error messages/alerts</li>
+          <li>sort movies function</li>
+          <li>DirectorView and GenreView updates</li>
+          <ul>
+            <li>responsive design fixes</li>
+            <li>'Back' button to return to the previously viewed movie instead of the main view</li>
+            <li>display corresponding movies</li>
+          </ul>
+          <li>design updates</li>
+        </ul>
+      </div>
+      <a href="../work.html"> Back to all projects </a>
+    </section>
 
     <footer class="page-footer">
       <p>
