--- a/work.html
+++ b/work.html
@@ -40,11 +40,20 @@
       <div class="grid">
 
         <div class="grid__item">
+          <h3>Portfolio website</h3>
+          <p>
+            Website created utilizing what HTML and CSS has to offer.
+          </p>
+          <a href=#>Read more</a><br>
+          <a href="https://github.com/lillapulay/portfolio-website" target="_blank" >See code on GitHub</a>
+        </div>
+
+        <div class="grid__item">
           <h3>Javascript Pokedex</h3>
           <p>
             Pokedex created with vanilla Javascript.
           </p>
-          <a href="projects/JavaScriptPokedex.html">Read more</a> <br>
+          <a href="#">Read more</a> <br>
           <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">See code on GitHub</a>
         </div>
@@ -52,47 +61,40 @@
         <div class="grid__item">
           <h3>Pokedex 2.0</h3>
           <p>
-            The Pokedex app upgraded with jQuery and Bootstrap.
+            The Pokedex app upgraded with jQuery and more.
           </p>
-          <a href="projects/jQueryPokedex.html">Read more</a> <br>
+          <a href="#">Read more</a> <br>
           <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">See website</a><br>
           <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">See code on GitHub</a>
         </div>
 
         <div class="grid__item">
-          <h3>myFlix</h3>
+          <h3>Coming soon...</h3>
+          <!--
           <p>
-            Movie app consisting of a movie database and client-side.
+            Coming soon...
           </p>
-          <a href="projects/myFlix.html">Read more</a> <br>
-          <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
+          <a href="#">See project on GitHub</a>
+          -->
+        </div>
+
+<!-- Hiding empty grids for now
+        <div class="grid__item">
+          <h3>Project 5</h3>
+          <p>
+            Coming soon...
+          </p>
+          <a href="#">See project on GitHub</a>
         </div>
 
         <div class="grid__item">
-          <h3>MyAwesomeQuizApp</h3>
+          <h3>Project 6</h3>
           <p>
-            Simple quiz app created with Angular.
+            Coming soon...
           </p>
-          <a href="projects/MyAwesomeQuizApp.html">Read more</a> <br>
-          <a href="https://lillapulay.github.io/my-awesome-quiz-app/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/my-awesome-quiz-app" target="_blank">See code on GitHub</a>
+          <a href="#">See project on GitHub</a>
         </div>
-
-        <div class="grid__item">
-          <h3>To-Do App</h3>
-          <p>
-            Basic to-do app built with Vue.js.
-          </p>
-          <a href="projects/ToDoApp.html">Read more</a> <br>
-          <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
-          <h3>Check back later for more projects!</h3>
-        </div>
-
+-->
       </div>
     </section>
 
