--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -1,97 +1,104 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta name="description" content="Lilla Pulay - Portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <title> myFlix </title>
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-  </head>
+<head>
+  <meta name="description" content="Lilla Pulay - Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="../img/favicon.ico">
+  <title> myFlix </title>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+</head>
 
-  <body>
+<body>
 
-    <header class="page-header">
-      <a href="../index.html"><img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item"></a>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="../index.html" role="menuitem" class="navigation-list__item">Home</a>
-          </li>
-          <li role="presentation">
-            <a href="../about.html" role="menuitem" class="navigation-list__item">About Me</a>
-          </li>
-          <li role="presentation">
-            <a href="../work.html" role="menuitem" class="navigation-list__item">Work</a>
-          </li>
-          <li role="presentation">
-            <a href="../contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <header class="page-header">
+    <a href="../index.html"><img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
+        class="page-header__item"></a>
+    <nav class="main-navigation page-header__item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a href="../index.html" role="menuitem" class="navigation-list__item">Home</a>
+        </li>
+        <li role="presentation">
+          <a href="../about.html" role="menuitem" class="navigation-list__item">About Me</a>
+        </li>
+        <li role="presentation">
+          <a href="../work.html" role="menuitem" class="navigation-list__item">Work</a>
+        </li>
+        <li role="presentation">
+          <a href="../contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="project">
-      <h1>myFlix</h1>
-      <div class="project-description">
-        <img src="../img/myflix.PNG" class="project__picture" alt="Screenshot of the app">
-        <h2>Description</h2>
-        <p>
-          Movie app consisting of a database containing a few movies and a client-side providing several features for users.
-          This project was part of the CF Full-Stack Web Development course.<br>
-          The web application provides users with access to information about different movies, directors, and genres.
-          Users can sign up, log in, update their account information and manage a list of their favorite movies.
-          <br><br>
-            <a href="https://mymovieapi2020.herokuapp.com/documentation.html" target="_blank">View documentation</a>
-          <br><br>
-        </p>
-        <div>
-          <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
-        </div>
-        <h2>Planned updates</h2>
-        <h3>Back-end</h3>
-        <ul>
-          <li>improved server-side validation</li>
-          <ul>
-            <li>username and password requirements (length, characters) and corresponding alerts/messages</li>
-            <li>1 user per email</li>
-            <li>user data updates with matching params only</li>
-          </ul>
-        </ul>
-
-        <h3>Client-side</h3>
-        <ul>
-          <li>animated logo/title in login and registration view</li>
-          <li>login error messages/alerts</li>
-          <li>sort movies function</li>
-          <li>DirectorView and GenreView updates</li>
-          <ul>
-            <li>responsive design fixes</li>
-            <li>'Back' button to return to the previously viewed movie instead of the main view</li>
-            <li>display corresponding movies</li>
-          </ul>
-          <li>design updates</li>
-        </ul>
-      </div>
-      <a href="../work.html"> Back to all projects </a>
-    </section>
-
-    <footer class="page-footer">
+  <section class="project">
+    <h1>myFlix</h1>
+    <div class="project-description">
+      <img src="../img/myflix.PNG" class="project__picture" alt="Screenshot of the app">
+      <h2>Description</h2>
       <p>
-        <span class="page-footer">Find me on</span>
+        Movie app consisting of a database containing a few movies and a client-side providing several features for
+        users.
+        This project was part of the CF Full-Stack Web Development course.<br>
+        The web application provides users with access to information about different movies, directors, and genres.
+        Users can sign up, log in, update their account information and manage a list of their favorite movies.
+        <br><br>
+        <a href="https://mymovieapi2020.herokuapp.com/documentation.html" target="_blank">View documentation</a>
+        <br><br>
       </p>
-      <div class="social-media">
-        <a href="https://github.com/lillapulay" target="_blank"><img src="../img/github_icon.svg" alt="github" title="GitHub"></a>
-        <a href="https://twitter.com/lillapulay" target="_blank"><img src="../img/twitter_icon.svg" alt="twitter" title="Twitter"></a>
-        <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="../img/linkedin_icon.svg" alt="linkedin" title="LinkedIn"></a>
+      <div>
+        <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
+        <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
       </div>
-    </footer>
-    <script src="../js/tota11y.min.js"></script>
+      <h2>Planned updates</h2>
+      <h3>Back-end</h3>
+      <ul>
+        <li>improved server-side validation</li>
+        <ul>
+          <li>username and password requirements (length, characters) and corresponding alerts/messages</li>
+          <li>1 user per email</li>
+          <li>user data updates with matching params only</li>
+        </ul>
+      </ul>
 
-  </body>
+      <h3>Client-side</h3>
+      <ul>
+        <li>animated logo/title in login and registration view</li>
+        <li>client-side form validation</li>
+        <li>login error messages/alerts</li>
+        <li>sort movies function</li>
+        <li>DirectorView and GenreView updates</li>
+        <ul>
+          <li>responsive design fixes</li>
+          <li>'Back' button to return to the previously viewed movie instead of the main view</li>
+          <li>display corresponding movies</li>
+        </ul>
+        <li>design updates</li>
+      </ul>
+    </div>
+    <a href="../work.html"> Back to all projects </a>
+  </section>
+
+  <footer class="page-footer">
+    <p>
+      <span class="page-footer">Find me on</span>
+    </p>
+    <div class="social-media">
+      <a href="https://github.com/lillapulay" target="_blank"><img src="../img/github_icon.svg" alt="github"
+          title="GitHub"></a>
+      <a href="https://twitter.com/lillapulay" target="_blank"><img src="../img/twitter_icon.svg" alt="twitter"
+          title="Twitter"></a>
+      <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="../img/linkedin_icon.svg"
+          alt="linkedin" title="LinkedIn"></a>
+    </div>
+  </footer>
+  <script src="../js/tota11y.min.js"></script>
+
+</body>
 
 </html>
