Updated Meetup description

--- a/projects/MeetupApp.html
+++ b/projects/MeetupApp.html
@@ -43,9 +43,22 @@
       <h2>Description</h2>
       <p>
         MeetUp application created by create-react-app, utilizing the MeetUp API.
+        The aim of this project was to learn different ways of testing and included aspects of both Test-Driven Development and Behavior-Driven Development:
+        <ul>
+          <li>Unit Testing</li>
+          <li>Integration Testing</li>
+          <li>Acceptance Testing</li>
+          <li>End-to-End Testing.</li>
+        </ul>
+        The app was built into a Progressive Web Application (PWA).
+        During the process, it required gaining experience with Continuous Delivery and Object-Oriented Programming.
+        The app has offline availability and includes data visualisation (number of events).<br>
         This project was part of the CF Full-Stack Web Development course.
       </p>
       <div>
+        <p class="testscenarios-button">
+          <a href="../files/Test_Scenarios.pdf" class="button" download target="_blank">View test scenarios</a>
+        </p>
         <a href="https://lillapulay.github.io/meetup/" target="_blank">See website</a><br>
         <a href="https://github.com/lillapulay/meetup" target="_blank">See code on GitHub</a>
       </div>
