Revert "Edited button"
This reverts commit bf356015c653d698a42ac040c096339f8deed661.

--- a/projects/MeetupApp.html
+++ b/projects/MeetupApp.html
@@ -57,7 +57,7 @@
       </p>
       <div>
         <p class="testscenarios-button">
-          <a href="../files/Test_Scenarios.pdf" class="button" target="_blank">View test scenarios</a>
+          <a href="../files/Test_Scenarios.pdf" class="button" download target="_blank">View test scenarios</a>
         </p>
         <a href="https://lillapulay.github.io/meetup/" target="_blank">See website</a><br>
         <a href="https://github.com/lillapulay/meetup" target="_blank">See code on GitHub</a>
