--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -24,7 +24,7 @@
           <a href="../index.html" role="menuitem" class="navigation-list__item">Home</a>
         </li>
         <li role="presentation">
-          <a href="../about.html" role="menuitem" class="navigation-list__item">About Me</a>
+          <a href="../about.html" role="menuitem" class="navigation-list__item">About</a>
         </li>
         <li role="presentation">
           <a href="../work.html" role="menuitem" class="navigation-list__item">Work</a>
