Moved "Skills and Tools" section to Work page

--- a/work.html
+++ b/work.html
@@ -92,7 +92,30 @@
       <div class="grid__item">
         <h3>Check back later for more projects!</h3>
       </div>
+    </div>
 
+    <div class="skills-tools">
+      <h2>
+        Skills and Tools
+      </h2>
+      <p>
+        <b>Project Management:</b>
+        Agile, Scrum, Critical thinking, Time management, Problem solving
+      </p>
+      <p>
+        <b>Front-End Development:</b>
+        HTML, CSS, Sass, JavaScript, jQuery, React, Angular, Vue.js, Web accessibility, Responsive design, Testing, Git
+        and Version control, Bootstrap, MVC, Axios, Flux, Redux
+      </p>
+      <p>
+        <b>Back-End Development:</b>
+        Node.js, MongoDB, Mongoose, Express, PostgreSQL, Rest API, Postman, HTTP and JWT Authentication, Passport, CORS,
+        Server-side input validation, Testing
+      </p>
+      <p>
+        <b>User Experience:</b>
+        Wireframing, User stories, User journey, Personas, Prototyping, Design thinking
+      </p>
     </div>
   </section>
 
