Renamed "Work" to "Projects" and adjusted navbar accordingly

--- a/projects/ToDoApp.html
+++ b/projects/ToDoApp.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <link rel="shortcut icon" href="../img/favicon.ico">
-  <title> To-Do App </title>
+  <title> To-Do App - Projects </title>
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -27,7 +27,7 @@
           <a href="../about.html" role="menuitem" class="navigation-list__item">About</a>
         </li>
         <li role="presentation">
-          <a href="../work.html" role="menuitem" class="navigation-list__item">Work</a>
+          <a href="../projects.html" role="menuitem" class="navigation-list__item">Projects</a>
         </li>
         <li role="presentation">
           <a href="../contact.html" role="menuitem" class="navigation-list__item">Contact</a>
