--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a>
         </li>
         <li role="presentation">
-          <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+          <a href="projects.html" role="menuitem" class="navigation-list__item">Projects</a>
         </li>
         <li role="presentation">
           <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
@@ -79,7 +79,7 @@
     </p>
     <p class="resume-button">
       <a href="files/PULAY_Lilla_Resume.pdf" class="button" download target="_blank">View resumé</a>
-    </p>    
+    </p>
   </div>
 
   <footer class="page-footer">
