Added "new" project

--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,9 @@
       </div>
 
       <div class="grid__item">
-        <h3>Check back later for more projects!</h3>
+        <p><b> Currently in development: </b><br>
+          Chat App <br>
+          (Mobile application) </p>
       </div>
     </div>
 
