Updated back button according to file name

--- a/projects/JavaScriptPokedex.html
+++ b/projects/JavaScriptPokedex.html
@@ -59,7 +59,7 @@
         <li>error handling and corresponding messages (e.g. offline mode)</li>
       </ul>
     </div>
-    <a href="../work.html"> Back to all projects </a>
+    <a href="../projects.html"> Back to all projects </a>
   </section>
 
   <footer class="page-footer">
