--- a/projects/MeetupApp.html
+++ b/projects/MeetupApp.html
@@ -67,7 +67,7 @@
         <li>pie chart placement</li>
       </ul>
     </div>
-    <a href="../work.html"> Back to all projects </a>
+    <a href="../projects.html"> Back to all projects </a>
   </section>
 
   <footer class="page-footer">
