--- a/projects/ToDoApp.html
+++ b/projects/ToDoApp.html
@@ -55,7 +55,7 @@
         <li>UI updates (e.g. improvements regarding checkboxes and button placement)</li>
       </ul>
     </div>
-    <a href="../work.html"> Back to all projects </a>
+    <a href="../projects.html"> Back to all projects </a>
   </section>
 
   <footer class="page-footer">
