--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -80,7 +80,7 @@
         <li>design updates</li>
       </ul>
     </div>
-    <a href="../work.html"> Back to all projects </a>
+    <a href="../projects.html"> Back to all projects </a>
   </section>
 
   <footer class="page-footer">
