--- a/projects/MyAwesomeQuizApp.html
+++ b/projects/MyAwesomeQuizApp.html
@@ -57,7 +57,7 @@
         <li>UI and design updates</li>
       </ul>
     </div>
-    <a href="../work.html"> Back to all projects </a>
+    <a href="../projects.html"> Back to all projects </a>
   </section>
 
   <footer class="page-footer">
