Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
     <p>
       You can check out my <span>code</span> by clicking
       <a href="https://github.com/lillapulay" target=_blank>on this link</a>,
-      or view my <span>projects</span> <a href="work.html">here</a>.
+      or view my <span>projects</span> <a href="projects.html">here</a>.
     </p>
   </div>
 
@@ -1018,7 +1018,7 @@
           title="GitHub"></a>
       <a href="https://twitter.com/lillapulay" target="_blank"><img src="img/twitter_icon.svg" alt="twitter"
           title="Twitter"></a>
-      <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="img/linkedin_icon.svg"
+      <a href="https://www.linkedin.com/in/lilla-pulay/" target="_blank"><img src="img/linkedin_icon.svg"
           alt="linkedin" title="LinkedIn"></a>
     </div>
   </footer>
