--- a/projects/jQueryPokedex.html
+++ b/projects/jQueryPokedex.html
@@ -68,7 +68,7 @@
           title="GitHub"></a>
       <a href="https://twitter.com/lillapulay" target="_blank"><img src="../img/twitter_icon.svg" alt="twitter"
           title="Twitter"></a>
-      <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="../img/linkedin_icon.svg"
+      <a href="https://www.linkedin.com/in/lilla-pulay/" target="_blank"><img src="../img/linkedin_icon.svg"
           alt="linkedin" title="LinkedIn"></a>
     </div>
   </footer>
