--- a/index.html
+++ b/index.html
@@ -1002,13 +1002,13 @@
     </svg>
     <h1> Welcome! </h1>
     <p>
-      My name is Lilla Pulay. I'm a <span>Web</span> Development student located in the Netherlands.
+      I am Lilla Pulay, a <span>Web</span> Development student located in the Netherlands.
       This is my portfolio page.
     </p>
     <p>
       You can check out my <span>code</span> by clicking
-      <a href="https://github.com/lillapulay" target=_blank>on this link</a>,
-      or view my <span>projects</span> <a href="projects.html">here</a>.
+      <a href="https://github.com/lillapulay" target=_blank class="page-link">on this link</a>,
+      or view my <span>projects</span> <a href="projects.html" class="page-link">here</a>.
     </p>
   </div>
 
